* correctly calculate extent for block in columns that starts below doctitle (#2579)
* support internal link on image (value of link attribute starts with #) (#2572)
* don't orphan section with unbreakable option that spans page boundary (#2608)
* correctly track start page number of section title that self-advances when section is breakable (#2609)

Compliance::

* drop support for JRuby 9.2 (require at least Ruby 2.7 compliance)

== 2.3.19 (2024-10-11) - @mojavelinux

Improvements::

* replace OpenStruct with internal ThemeData class for storing theme data (#2535)

Bug Fixes::

* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
* don't allow AsciiDoc table cell to overrun bottom of page on which it fits (#2538)
* don't look for NULL glyph in fallback font as this can impact line height (#2541)

=== Details

{url-repo}/releases/tag/v2.3.19[git tag] | {url-repo}/compare/v2.3.18\...v2.3.19[full diff]

== 2.3.18 (2024-07-27) - @mojavelinux

Bug Fixes::

* position foreground image correctly when page layout changes (#2528)

Compliance::

* release lock on version of rexml (pulled in by asciidoctor-diagram and prawn-svg) now that incompatibility is resolved

== 2.3.17 (2024-06-01) - @mojavelinux

Improvements::

* always use /Producer field in document info to credit Asciidoctor PDF and Prawn, even when author is set (#2510)
* map `producer` attribute to /Producer field in document info to override or default value (#2510)
* map `publisher` attribute to /Creator field instead of /Producer field in document info; use author as fallback (#2510)

=== Details

{url-repo}/releases/tag/v2.3.17[git tag] | {url-repo}/compare/v2.3.16\...v2.3.17[full diff]

== 2.3.16 (2024-05-31) - @mojavelinux

Improvements::

* don't hyphenate autolink when hyphenation is enabled (#2521) (*@meonkeys*)
* add support for base64-encoded SVG image reference in SVG (#2512)

Bug Fixes::
